--- a/app/src/main/res/values-land/colors.xml
+++ b/app/src/main/res/values-land/colors.xml
@@ -8,7 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="personal">#2e17a7</color>
-    <color name="main">#0e675f</color>
+    <color name="main">#0a0201</color>
 
 
 </resources>
