--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,37 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="StyleForButton" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="android:textSize">@dimen/buttonTextSize</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:layout_marginRight">@dimen/marginSize</item>
+        <item name="android:layout_marginLeft">@dimen/marginSize</item>
+        <item name="android:layout_marginEnd">@dimen/marginSize</item>
+        <item name="android:layout_marginTop">@dimen/marginSize</item>
+        <item name="android:layout_marginStart">@dimen/marginSize</item>
+        <item name="android:fontFamily">sans-serif-black</item>
+        <item name="backgroundTint">@color/personal</item>
+        <item name="strokeWidth">@dimen/buttonStrokeWidth</item>
+        <item name="strokeColor">@color/black</item>
+        <item name="cornerRadius">@dimen/buttonCornerRadius</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_width">0dp</item>
+    </style>
+
+    <style name="StyleForLayoutLiner" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <item name="android:layout_marginLeft">35dp</item>
+    <item name="android:layout_marginRight">35dp</item>
+    <item name="android:layout_marginTop">10dp</item>
+        <item name="android:background">#0e675f</item>
+
+    </style>
+
+    <style name="StyleForLayoutLinerText" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="android:layout_marginLeft">35dp</item>
+        <item name="android:layout_marginRight">35dp</item>
+        <item name="android:layout_marginTop">30dp</item>
+
+    </style>
+
 </resources>
