--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
     <style name="Theme.AndroidHomeworks" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
@@ -9,9 +7,7 @@
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
     </style>
 
     <style name="StyleForButton" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
@@ -25,7 +21,7 @@
         <item name="android:fontFamily">sans-serif-black</item>
         <item name="backgroundTint">@color/personal</item>
         <item name="strokeWidth">@dimen/buttonStrokeWidth</item>
-        <item name="strokeColor">@color/black</item>
+        <item name="strokeColor">@color/white</item>
         <item name="cornerRadius">@dimen/buttonCornerRadius</item>
         <item name="android:layout_weight">1</item>
         <item name="android:layout_width">0dp</item>
@@ -35,7 +31,7 @@
         <item name="android:layout_marginLeft">35dp</item>
         <item name="android:layout_marginRight">35dp</item>
         <item name="android:layout_marginTop">10dp</item>
-        <item name="android:background">#0e675f</item>
+        <item name="android:background">@color/main</item>
 
     </style>
 
