--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,11 @@
     <color name="white">#FFFFFFFF</color>
     <color name="personal">#2e17a7</color>
     <color name="main">#0e675f</color>
+    <color name="green">#12620d</color>
+    <color name="red">#cc1c1e</color>
+    <color name="strokeColor">#FF000000</color>
+
+
 
 
 </resources>
