--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,17 +1,13 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+
     <style name="Theme.AndroidHomeworks" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
     </style>
 
     <style name="StyleForButton" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
@@ -32,18 +28,32 @@
     </style>
 
     <style name="StyleForLayoutLiner" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-    <item name="android:layout_marginLeft">35dp</item>
-    <item name="android:layout_marginRight">35dp</item>
-    <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_marginLeft">35dp</item>
+        <item name="android:layout_marginRight">35dp</item>
+        <item name="android:layout_marginTop">10dp</item>
         <item name="android:background">#0e675f</item>
-
     </style>
 
     <style name="StyleForLayoutLinerText" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="android:layout_marginLeft">35dp</item>
         <item name="android:layout_marginRight">35dp</item>
         <item name="android:layout_marginTop">30dp</item>
+    </style>
 
+    <style name="StyleForSettingsTestOne" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="android:background">@color/main</item>
+        <item name="strokeColor">@color/white</item>
+        <item name="backgroundTint">@color/black</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/buttonTextSize</item>
+    </style>
+
+    <style name="StyleForSettingsTestTwo" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="android:background">@color/black</item>
+        <item name="strokeColor">@color/white</item>
+        <item name="backgroundTint">@color/black</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/buttonTextSize</item>
     </style>
 
 </resources>
